--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,3 +2,9 @@ telegram {
     token = ""
     token = ${?BOTBEK_TG_TOKEN}
 }
+
+unsplash {
+    url = "https://api.unsplash.com/"
+    token = ""
+    token = ${?UNSPLASH_TOKEN}
+}
