--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,10 +1,10 @@
-telegram {
+telegram = {
     url = "https://api.telegram.org"
     token = ""
     token = ${?BOTBEK_TG_TOKEN}
 }
 
-unsplash {
+unsplash = {
     url = "https://api.unsplash.com/"
     token = ""
     token = ${?UNSPLASH_TOKEN}
