--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Deploy notification
         uses: appleboy/telegram-action@master
         with:
-          to: ${{ secrets.INFORM_CHAT_ID }}
+          to: ${{ secrets.NOTIFY_CHAT_ID }}
           token: ${{ secrets.TG_TOKEN }}
           message: |
             New release is deployed 🚀
