--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,9 +1,10 @@
 name: Scala CI [dev]
 
 on:
-  pull_request:
+  push:
     branches:
-      - main
+      - '*'
+      - '!master'
 
 jobs:
   build:
